# claude-tui

./: .cc  .coveragerc  .env.example  .env.production  .gitignore  .gitleaks.toml  .oa  .pre-commit-config.yaml  .sp  .yamllint.yml  ANTI_HALLUCINATION_IMPLEMENTATION_COMPLETE.md  AUTOMATIC_PROGRAMMING_INTEGRATION_SUMMARY.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COMMUNITY_IMPLEMENTATION_SUMMARY.md  COMMUNITY_PLATFORM_IMPLEMENTATION_COMPLETE.md  COMMUNITY_PLATFORM_IMPLEMENTATION_SUMMARY.md  CORE_IMPLEMENTATION_SUMMARY.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_OPTIMIZATION_REPORT.md  DEPLOYMENT_READY.md  DEVOPS-README.md  DEVOPS-SUMMARY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.security-hardened  EXECUTIVE_SUMMARY.md  FINAL_VALIDATION_REPORT.json  FINAL_VALIDATION_REPORT.md  FIX_SUMMARY.md  HIVE_MIND_IMPLEMENTATION_REPORT.md  LAUNCHER_GUIDE.md  LICENSE_HEADER.txt  Makefile  PERFORMANCE_CRISIS_RESOLVED.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  (+60 more)
.github/: dependabot.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.mcp/: start-servers.sh  stop-servers.sh
.zap/: rules.tsv
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
company/: VISION.md  dashboard.py  run_project.py
config/: .encryption_key  ai_services.yaml  auth.yml  database.py  security.env.template
deployment/: PRODUCTION_DEPLOY.sh  QUANTUM_CICD_PRODUCTION_GUIDE.md  README.md  ci-cd-validation-report.json
deployment_logs/: deployment_report_1756125231.txt  memory_optimization_deployment_1756125231.json
docker/: .dockerignore  Dockerfile.production
docs/: CLAUDE_CODE_CLIENT_IMPLEMENTATION.md  CLAUDE_CODE_DIRECT_INTEGRATION.md  CLAUDE_DIRECT_CLIENT_MODERNIZATION.md  CLAUDE_TUI_ARCHITECTURE_ANALYSIS.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_PERFORMANCE_OPTIMIZATION_REPORT.md  COMPREHENSIVE_SECURITY_ASSESSMENT_REPORT.md  CONTRIBUTING-comprehensive.md  CONTRIBUTING.md  CRITICAL_IMPORT_FIXES_DOCUMENTATION.md  DATABASE_CONFIGURATION.md  DEVELOPMENT_PLAN_SUMMARY.md  EMERGENCY_MEMORY_OPTIMIZATION_COMPLETE.md  EXECUTIVE_DEVELOPMENT_SUMMARY_Q1_Q2_2026.md  EXECUTIVE_SUMMARY.md  FINAL_PRODUCTION_VALIDATION_CERTIFICATE.md  FINAL_PRODUCTION_VALIDATION_REPORT.md  HIVE_MIND_ANALYSIS_DOCUMENTATION.md  HIVE_MIND_CODEBASE_ARCHITECTURE.md  HIVE_MIND_COLLECTIVE_INTELLIGENCE_REPORT.md  HIVE_MIND_DEVELOPMENT_REPORT.md  HIVE_MIND_ELITE_VICTORY.md  HIVE_MIND_MEMORY_OPTIMIZATION_REPORT.md  HIVE_MIND_SUCCESS_STORY.md  HIVE_MIND_VICTORY_REPORT.md  IMPORT_STANDARDIZATION_REPORT.md  LAUNCH_ANNOUNCEMENT.md  PERFORMANCE_ANALYSIS_EXECUTIVE_SUMMARY.md  PERFORMANCE_BENCHMARKING_GUIDE.md  PERFORMANCE_OPTIMIZATION_COMPREHENSIVE_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_FINAL.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_LAUNCH_VALIDATION_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_VALIDATION_ASSESSMENT.md  PRODUCTION_VALIDATION_SUMMARY.md  PYDANTIC_COMPATIBILITY_SOLUTION.md  QUANTUM_INTELLIGENCE_DEVELOPMENT_PLAN_Q1_Q2_2026.md  (+82 more)
examples/: analytics_usage_examples.py  claude_code_direct_example.py  consciousness_system_demo.py
k8s/: claude-tui-production.yaml  configmap.yaml  deployment.yaml  external-secrets.yaml  hpa.yaml  namespace.yaml  network-policies.yaml  pod-security-policies.yaml  rbac.yaml  secrets.yaml  service.yaml  storage.yaml
memory/: claude-flow-data.json  memory-store.json
monitoring/: cloudwatch-dashboard.json  grafana-dashboard.json  prometheus-config.yaml  prometheus-production.yaml  prometheus-rules.yaml
scripts/: automatic_programming_demo.py  check_performance_regression.py  complete_system_test.py  coverage_report.py  db-migration.sh  deploy-blue-green.sh  (+27 more)
(+986 files in other folders)
